# kata

./: LICENSE  README.md
gilded-rose/: README.md  pyproject.toml
gilded-rose/src/: gilded_rose.py  models.py  texttest_fixture.py  updater.py
gilded-rose/tests/: test_aged_brie.py  test_backstage_pass.py  test_conjured.py  test_defaults.py  test_gilded_rose.py  test_sulfuras.py
theatrical-players/: README.md  pyproject.toml
theatrical-players/src/: accountable.py  models.py  statement.py  template.py
theatrical-players/src/accountables/: comedy.py  core.py  history.py  pastoral.py  tragedy.py
theatrical-players/test/: test_defaults.py  test_new.py  test_new.test_statement_with_new_play_types.approved.txt  test_new.test_statement_with_new_play_types_as_html.approved.txt  test_statement.py
